# cpp-tests

./: .gitignore  CMakeLists.txt  README.md  vim.exe.stackdump
.devcontainer/: devcontainer.json
algos/: CMakeLists.txt
concurrency/: CMakeLists.txt
concurrency/mutex_lock_handlers/: CMakeLists.txt
containers/: CMakeLists.txt
crtp/: .crtp.cpp.un~  .normal.cpp.un~
curious_recursive/: CMakeLists.txt
inc/: myprint.h
modern_cpp/: CMakeLists.txt
modern_cpp/algos/find/: find.cpp
modern_cpp/algos/find_if/: CMakeLists.txt
modern_cpp/algos/generate/: CMakeLists.txt  generate.cpp
modern_cpp/all_about_aliases/: CMakeLists.txt  alias.cpp
modern_cpp/all_about_constexpr/: CMakeLists.txt  constexpr.cpp
modern_cpp/all_about_default_methods/: CMakeLists.txt  main.cpp
modern_cpp/all_about_lambdas/: CMakeLists.txt  lamda.cpp
modern_cpp/all_about_optional_variables/: CMakeLists.txt  main.cpp  optional_class_var.h
modern_cpp/all_about_return_type_deduction/: CMakeLists.txt  common_def.h
modern_cpp/all_about_return_type_deduction/cpp11/: CMakeLists.txt  cpp11.cpp
modern_cpp/all_about_return_type_deduction/cpp14_17/: CMakeLists.txt  cpp14_17.cpp
modern_cpp/all_about_rvalue_refs/: CMakeLists.txt  main.cpp  test1.h  test4.h  test5.h  test8.h  test9.h  test_copyeffects.h  test_doublepassing.h  test_impact_of_move.h  test_legacy.h  test_moveconstruction.h  test_overloads.h  test_perfect_forwarding.h  test_reference_collapsing.h  test_rvalues.h  test_tuples_with_rvalues.h
modern_cpp/all_about_std_function/: CMakeLists.txt  function.cpp
modern_cpp/all_about_tuple/: CMakeLists.txt  main.cpp  test.cpp  test1.h  test2.h
modern_cpp/all_about_variant/: CMakeLists.txt  var.cpp
modern_cpp/complex_conditions/: CMakeLists.txt  main.cpp
modern_cpp/copy_move/: .rvalue.cpp.un~  CMakeLists.txt  cond_cp_mv.h  cp_mv.cpp  cp_mv.h  main.cpp
modern_cpp/data_structures/: CMakeLists.txt
modern_cpp/data_structures/list/: CMakeLists.txt  test.cpp
modern_cpp/data_structures/unordered_map/: CMakeLists.txt  test.cpp
modern_cpp/find_algo_tests/: CMakeLists.txt  f.cpp
modern_cpp/fold_expressions/: CMakeLists.txt  fold.cpp
modern_cpp/generic_lambda/: CMakeLists.txt  main.cpp
modern_cpp/initializer_list/: CMakeLists.txt  init_list.cpp
modern_cpp/ppack_conditional_check_example/: CMakeLists.txt  if_constexpr.h  sfinae.h  test.cpp
modern_cpp/ppack_fn/: .ppack.cpp.swp  .ppack.cpp.un~  CMakeLists.txt  ppack.cpp
modern_cpp/ppack_sizeof/: CMakeLists.txt  test.cpp
modern_cpp/ppack_utils/: CMakeLists.txt  ppack.h  test.cpp
modern_cpp/range_for/: CMakeLists.txt  range.cpp
modern_cpp/rvalue_refs/: CMakeLists.txt  main.cpp  test2.h  test3.h  test4.h  test5.h  test6.h  test7.h
modern_cpp/sfinae_enable_if/: CMakeLists.txt
modern_cpp/smart_ptrs_shared_weak_ptr/: CMakeLists.txt  main.cpp  sp.h
modern_cpp/smart_ptrs_unique/: CMakeLists.txt  main.cpp  sp.h  uniq.cpp  uniq.h
modern_cpp/type_traits/: CMakeLists.txt  eif.cpp  is_same.h  main.cpp
modern_cpp/variable_templates/: CMakeLists.txt  main.cpp
modern_cpp/variant/: CMakeLists.txt  var.cpp
modern_cpp/variant/vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Variant-Demo.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  variant.vcxproj  variant.vcxproj.filters
modern_cpp/variant/vs/variant.dir/Debug/variant.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
modern_cpp/variant/vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
traits/: CMakeLists.txt
(+78 files in other folders)
