cmake_minimum_required(VERSION 3.5.1)

project(Modern-CPP-Tests)

add_subdirectory(algos)
add_subdirectory(all_about_constexpr)
add_subdirectory(all_about_lambdas)
add_subdirectory(all_about_rvalue_refs)
add_subdirectory(all_about_variant)
add_subdirectory(copy_move)
add_subdirectory(generic_lambda)
add_subdirectory(initializer_list)
add_subdirectory(ppack_conditional_check_example)
add_subdirectory(ppack_fn)
add_subdirectory(ppack_sizeof)
add_subdirectory(range_for)
add_subdirectory(smart_ptrs_unique)
add_subdirectory(type_traits)
if (UNIX)
  add_subdirectory(variable_templates)
endif()
